# ResumeGraph

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  flow.md  plan.md  pyproject.toml
src/resume_graph/: config.py  ingest.py  main.py  models.py
src/resume_graph/api/: app.py
src/resume_graph/generate/: __main__.py  pdf_builder.py  profiles.py  resumes.py
src/resume_graph/graph/: embeddings.py  index.py  retrievers.py  schema.py  store.py
src/resume_graph/mcp/: server.py
